// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CullingInformation it should render correctly without any date 1`] = `
<Fragment>
  <Tooltip
    content="System scheduled for inventory removal in -18296 days"
    position="bottom"
  >
    <span
      className="ins-c-inventory__culling-danger"
    >
      <ExclamationCircleIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
  </Tooltip>
</Fragment>
`;

exports[`CullingInformation should render with dates - danger 1`] = `
<Fragment>
  <Tooltip
    content="System scheduled for inventory removal in 0 days"
    position="bottom"
  >
    <span
      className="ins-c-inventory__culling-danger"
    >
      <ExclamationCircleIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      Some children
    </span>
  </Tooltip>
</Fragment>
`;

exports[`CullingInformation should render with dates - no tooltip 1`] = `"Some children"`;

exports[`CullingInformation should render with dates - warning 1`] = `
<Fragment>
  <Tooltip
    content="System scheduled for inventory removal in 2 days"
    position="bottom"
  >
    <span
      className="ins-c-inventory__culling-danger"
    >
      <ExclamationCircleIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      Some children
    </span>
  </Tooltip>
</Fragment>
`;

exports[`CullingInformation should render with dates 1`] = `
<Fragment>
  <Tooltip
    content="System scheduled for inventory removal in 10 days"
    position="bottom"
  >
    <span
      className="ins-c-inventory__culling-warning"
    >
      <ExclamationTriangleIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
      Some children
    </span>
  </Tooltip>
</Fragment>
`;
